--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 h2 {
     font-weight: 500;
     font-size: 24px;
-    align-items: ;
+    align-items: center;
 } 
 
 .topBelt {
@@ -142,7 +142,7 @@ top: 30px;
 }
 
 .collabWord {
-    top: 130px
+    top: 130px;
 }
 
 .circlesButton {
@@ -170,3 +170,98 @@ top: 30px;
     display: flex;
     justify-content: space-around;
 }
+
+.howCollabHelpContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 100px;
+    margin-top: 100px;
+    width: 100%;
+}
+
+.howHelpBox {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    background-color: antiquewhite;
+    align-items: center;
+}
+
+.howHelpleft {
+    width: 30%;
+    background-color: #60267F;
+}
+
+.howHelpBtn {
+    display: flex;
+    width: 100%;
+    box-shadow: 1px 5px 9px -2px rgba(0,0,0,0.75);
+-webkit-box-shadow: 1px 5px 9px -2px rgba(0,0,0,0.75);
+-moz-box-shadow: 1px 5px 9px -2px rgba(0,0,0,0.75);
+padding: 5px;
+}
+
+.btnHelp {
+    padding: 5px;
+    border: none;
+    background-color: transparent;
+    border-radius: 3px;
+}
+
+.btnHelp:hover{
+    background-color: #9A54BC;
+    color: white;
+}
+
+
+.howHelpVendorBtn {
+    width: 50%;
+    padding: 5px;
+    border: none;
+    background-color: transparent;
+}
+
+.howHelpSupervisorBtn {
+    width: 50%;
+}
+
+.howHelpTextContainer {
+    display: flex;
+}
+
+.howHelpText {
+    background-color: #F2F2F2;
+    padding: 20px 10px;
+}
+
+.howHelpRight {
+    width: 40%;
+    background-color: #9A54BC;
+    display: flex;
+    align-items: center;
+}
+
+.howHelpPhone {
+    height: 600px;
+}
+
+.videoContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+    margin-top: 100px;
+    gap: 50px;
+}
+
+.videoPara {
+    width: 50%;
+    text-align: center;
+}
+
+.iframe (
+    background-color: transparent;
+)
